Fixed search accordion overflow for chrome

--- a/public/stylesheets/jquery-ui-1.8.9.custom/jquery-ui-1.8.9.ada.css
+++ b/public/stylesheets/jquery-ui-1.8.9.custom/jquery-ui-1.8.9.ada.css
@@ -137,7 +137,7 @@
 	border-top: 0;
 	position: relative;
 	top: 1px;
-	overflow: auto;
+	overflow: hidden;
 	display: none;
 	zoom: 1;
 }
